# auxjad

./: .gitignore  .travis.yml  LICENSE  MANIFEST.in  Makefile  README.rst  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: github-actions.yml
auxjad/: __init__.py
auxjad/core/: Adrifter.py  CartographyContainer.py  CartographySelector.py  CrossFader.py  Drifter.py  Echoer.py  Fader.py  FittestMeasureMaker.py  GeneticAlgorithm.py  GeneticAlgorithmMusicMaker.py  Hocketer.py  LeafDynMaker.py  LeafLooper.py  LeafShuffler.py  ListLooper.py  LoopByList.py  LoopByLogicalTies.py  LoopByNotes.py  LoopByWindow.py  LoopWindow.py  LoopWindowByElements.py  LoopWindowByList.py  Phaser.py  PitchRandomiser.py  Repeater.py  Shuffler.py  TenneySelector.py  TenneysContainer.py  WindowLooper.py  _LoopParent.py  _LoopWindowGeneric.py  _LooperParent.py  __init__.py
auxjad/entities/: ArtificialHarmonic.py  HarmonicNote.py  _HarmonicParent.py  __init__.py
auxjad/get/: __init__.py  extract_time_signatures.py  leaves_are_tieable.py  rhythms_are_identical.py  selection_is_full.py  selections_are_identical.py  time_signature_list.py  underfull_duration.py  virtual_fundamental.py
auxjad/indicators/: NumericOttava.py  TimeSignature.py  __init__.py
auxjad/inspections/: __init__.py  inspect.py  leaves_are_tieable.py  selection_is_full.py  selections_are_equal.py  time_signature_extractor.py  underfull_duration.py
auxjad/makers/: GeneticAlgorithmMusicMaker.py  LeafDynMaker.py  __init__.py
auxjad/mutate/: __init__.py  add_double_bar_lines_before_time_signatures.py  auto_rewrite_meter.py  close_container.py  contract_notes.py  double_barlines_before_time_signatures.py  enforce_time_signature.py  extend_notes.py  extract_trivial_tuplets.py  fill_with_rests.py  merge_hairpins.py  merge_partial_tuplets.py  prettify_rewrite_meter.py  remove_repeated_dynamics.py  remove_repeated_time_signatures.py  reposition_clefs.py  reposition_dynamics.py  reposition_slurs.py  respell_accidentals.py  respell_augmented_unisons.py  rests_to_multimeasure_rest.py  sustain_notes.py  sync_containers.py
auxjad/mutations/: __init__.py  auto_rewrite_meter.py  close_container.py  enforce_time_signature.py  extract_trivial_tuplets.py  fill_with_rests.py  mutate.py  prettify_rewrite_meter.py  remove_empty_tuplets.py  remove_repeated_dynamics.py  remove_repeated_time_signatures.py  reposition_clefs.py  reposition_dynamics.py  reposition_slurs.py  respell_accidentals.py  rests_to_multimeasure_rest.py  sustain_notes.py  sync_containers.py
auxjad/score/: ArtificialHarmonic.py  HarmonicNote.py  LeafDynMaker.py  Score.py  _HarmonicParent.py  __init__.py
auxjad/score_components/: ArtificialHarmonic.py  HarmonicNote.py  _HarmonicParent.py  __init__.py
auxjad/select/: __init__.py  logical_selections.py
auxjad/spanners/: __init__.py  half_piano_pedal.py  numeric_ottava.py  ottava.py  piano_pedal.py
auxjad/tools/: ArtificialHarmonic.py  CartographyContainer.py  HarmonicNote.py  LeafDynMaker.py  LeafShuffler.py  LoopWindow.py  LoopWindowByElements.py  LoopWindowByList.py  NoteDynMaker.py  TenneysContainer.py  _LoopWindowGeneric.py  __init__.py  are_containers_equal.py  are_leaves_tieable.py  close_container.py  container_comparator.py  fill_with_rests.py  is_container_full.py  remove_repeated_dynamics.py  remove_repeated_time_signature.py  remove_repeated_time_signatures.py  repeat_container.py  respell_chord.py  respell_container.py  rests_to_multimeasure_rest.py  simplified_time_signature_ratio.py  sync_containers.py  time_signature_remover.py  underfull_duration.py
auxjad/utilities/: __init__.py  adjust_clefs.py  are_containers_equal.py  are_leaves_tieable.py  close_container.py  container_is_full.py  containers_are_equal.py  enforce_time_signature.py  fill_with_rests.py  inspect.py  leaves_are_tieable.py  mutate.py  prettify_rewrite_meter.py  remove_empty_tuplets.py  remove_repeated_dynamics.py  remove_repeated_time_signatures.py  repeat_container.py  reposition_clefs.py  reposition_slurs.py  (+10 more)
docs/: Makefile  api-core.rst  api-score_components.rst  api-utilities.rst  api.rst  conf.py  contents.rst  example-1.rst  example-2.rst  examples-main.rst  examples.rst  image-generator.py  index.rst
tests/: test_Adrifter.py  test_ArtificialHarmonic.py  test_CartographyContainer.py  test_CartographySelector.py  test_Drifter.py  test_Fader.py  test_HarmonicNote.py  test_Hocketer.py  test_LeafDynMaker.py  test_LeafLooper.py  test_LeafShuffler.py  test_ListLooper.py  test_LoopByList.py  test_LoopByLogicalTies.py  test_LoopByNotes.py  test_LoopByWindow.py  test_LoopWindow.py  test_LoopWindowByElements.py  test_LoopWindowByList.py  test_Phaser.py  test_PitchRandomiser.py  test_Shuffler.py  test_TenneySelector.py  test_TenneysContainer.py  test_WindowLooper.py  test_adjust_clefs.py  test_are_containers_equal.py  test_are_leaves_tieable.py  test_close_container.py  test_complex_music_examples.py  test_container_comparator.py  test_container_is_full.py  test_containers_are_equal.py  test_enforce_time_signature.py  test_fill_with_rests.py  test_is_container_full.py  test_leaves_are_tieable.py  test_prettify_rewrite_meter.py  test_remove_empty_tuplets.py  test_remove_repeated_dynamics.py  (+14 more)
(+312 files in other folders)
