[build-system]
requires = [
    "setuptools>=61.0",
    "twine>=6.2.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "auxjad"
dynamic = ["version", "dependencies"]
description = "Auxiliary classes and functions for Abjad."
license = { text = "MIT" }
readme = "README.rst"
requires-python = ">=3.10"
keywords = [
    "auxjad",
    "algorithmic composition",
    "generative music",
    "computer music",
    "music composition",
    "music notation",
    "lilypond",
    "abjad",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Artistic Software",
    "Topic :: Utilities",
]

[[project.authors]]
name = "Gilberto Agostinho"
email = "gilbertohasnofb@gmail.com"

[project.urls]
homepage = "https://gilbertohasnofb.github.io/auxjad-docs/"
source = "https://github.com/gilbertohasnofb/auxjad"

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = "tests"

[tool.setuptools]
include-package-data = true
packages = ["auxjad"]
package-dir = { "" = "src" }

[tool.setuptools.package-data]
"*" = ["LICENSE", "README.rst"]
"auxjad" = ["**/*"]

[tool.setuptools.dynamic]
version = {attr = "auxjad.__version__"}
dependencies = {file = ["requirements.txt"]}

[tool.black]
line-length = 100

[tool.isort]
case_sensitive = true
line_length = 100
multi_line_output = 3
known_first_party = ["auxjad"]
skip = ["src/auxjad/__init__.py", "sandbox.py"]
skip_gitignore = true
include_trailing_comma = true
use_parentheses = true

[tool.pydocstyle]
match_dir = "src"
select = ["D101", "D102", "D103", "D105", "D300", "D301"]