[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auxjad"
description = "Auxiliary classes and functions for Abjad."
authors = [{name = "Gilberto Agostinho", email = "gilbertohasnofb@gmail.com"}]
readme = "README.rst"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dynamic = ["version", "dependencies", "optional-dependencies"]
keywords = [
    "auxjad",
    "algorithmic composition",
    "generative music",
    "computer music",
    "music composition",
    "music notation",
    "lilypond",
    "abjad",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Artistic Software",
    "Topic :: Utilities",
]

[project.urls]
homepage = "https://gilbertohasnofb.github.io/auxjad-docs/"
source = "https://github.com/gilbertohasnofb/auxjad"

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = "tests"

[tool.setuptools]
packages = ["auxjad"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["LICENSE", "README.rst"]
"auxjad" = ["**/*"]

[tool.setuptools.dynamic]
version = {attr = "auxjad._version.__version__"}
dependencies = {file = ["requirements.txt"]}
optional-dependencies.dev = {file = ["requirements-dev.txt"]}
optional-dependencies.test = {file = ["requirements-test.txt"]}

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313"]

[tool.isort]
profile = "black"
line_length = 100
case_sensitive = true
skip_gitignore = true
known_first_party = ["auxjad"]

[tool.pydocstyle]
match_dir = "src"
select = ["D101", "D102", "D103", "D105", "D300", "D301"]